tests/invalid/undef_lambda_mode.err_exp
undef_lambda_mode.m:009: Error: predicate `test'/1 declares a determinism
undef_lambda_mode.m:009:   without declaring the modes of its arguments.
undef_lambda_mode.m:014: In mode declaration for lambda expression:
undef_lambda_mode.m:014:   error: undefined mode `junk'/0.
